--- a/blog.html
+++ b/blog.html
@@ -112,7 +112,7 @@
         <div class="row justify-content-center design-5">
             <div class="col-md-6">
                 <div class="blog-section">
-                    <img src="C:\Users\raich\Pictures\pearl.png" alt="Pearl girl" class="img-fluid">
+                    <img src="" alt="Pearl girl" class="img-fluid">
                     <h5><i>The famous painting, recreated.</i></h5>
                     <p>
                         The Girl with a Pearl Earring painted by Dutch painter Johannes Vermeer, reimagining the classic 
@@ -128,7 +128,7 @@
             <!-- Design 1 -->
             <div class="col-12 col-sm-6 col-md-3">
                 <div class="blog-section">
-                    <img src="C:\Users\raich\Pictures\d3.png" alt="Basketball Design" class="img-fluid">
+                    <img src="" alt="Basketball Design" class="img-fluid">
                     <h5>Chasing Dreams, One Hoop at a Time.</h5>
                     <p>
                         I have always been interested in basketball. When I got the opportunity to actually enjoy the game not as 
@@ -141,7 +141,7 @@
             <!-- Design 2 -->
             <div class="col-12 col-sm-6 col-md-3">
                 <div class="blog-section">
-                    <img src="C:\Users\raich\Pictures\d5.png" alt="Window Design" class="img-fluid">
+                    <img src="" alt="Window Design" class="img-fluid">
                     <h5>Framed by Nature</h5>
                     <p>
                         As eyes are the windows to the soul, the windows are our eyes. I have always loved decorated windows, and 
@@ -153,7 +153,7 @@
             <!-- Design 3 -->
             <div class="col-12 col-sm-6 col-md-3">
                 <div class="blog-section">
-                    <img src="C:\Users\raich\Pictures\d4.png" alt="Building Design" class="img-fluid">
+                    <img src="" alt="Building Design" class="img-fluid">
                     <h5>Nature's Cornerstone</h5>
                     <p>
                         A building is not just a structure; it’s a story told through its walls, windows, and decorations. This 
@@ -165,7 +165,7 @@
             <!-- Design 4 -->
             <div class="col-12 col-sm-6 col-md-3">
                 <div class="blog-section">
-                    <img src="C:\Users\raich\Pictures\d2.png" alt="Coffee Design" class="img-fluid">
+                    <img src="" alt="Coffee Design" class="img-fluid">
                     <h5>Coffee, the All-Time Favorite</h5>
                     <p>
                         Coffee is more than just a beverage; it’s a moment of warmth and pause. The aroma inspired this design, 
@@ -181,15 +181,14 @@
         <h2>About Me</h2>
         <h5><i>I am who I am.</i></h5>
         <p>
-            Since childhood, I've been drawn to art and all forms of creativity. Though an amateur, designing brings me immense 
-            joy, especially when I create something I find truly beautiful. Everyday beauty inspires my designs and fuels my imagination.
+            About yourself.
         </p>
     </div>
 
     <!-- Mail Section -->
     <div id="mail-section" class="mail-section section-offset">
         <h2>Contact Me</h2>
-        <p>Email: raichurneha00@gmail.com</p>
+        <p>Email: example@gmail.com</p>
     </div>
 
     <!-- Footer -->
